Messages linked to user when created and displayed on profile page